--- a/Assign1/app/build.gradle
+++ b/Assign1/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 31
-    buildToolsVersion "31.0.0"
+    buildToolsVersion "30.0.2"
 
     defaultConfig {
         applicationId "com.mohanpan.assign1"
@@ -31,7 +31,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
-    implementation files('libs\\MathParser.org-mXparser-v.4.4.0-jdk8.jar')
+    implementation files('libs/MathParser.org-mXparser-v.4.4.0-jdk8.jar')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
